# harmonia

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  default.nix  spec.md
.github/workflows/: release.yml
docs/: .gitignore  configuration.md  getting-started.md  index.md  package.json  plan-and-mr.md  release.md  shell.md  troubleshooting.md  workflows.md
docs/.vitepress/: config.mts
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  repo.rs  resolve.rs  workspace.rs
src/core/: changeset.rs  mod.rs  repo.rs  version.rs  workspace.rs
src/ecosystem/: custom.rs  go.rs  mod.rs  node.rs  python.rs  rust.rs  traits.rs
src/forge/: github.rs  gitlab.rs  mod.rs  traits.rs
src/git/: mod.rs  ops.rs  status.rs
src/graph/: builder.rs  constraint.rs  mod.rs  ops.rs  viz.rs
src/util/: mod.rs  output.rs  parallel.rs  template.rs
tests/: branch_scope_integration.rs  branch_track_integration.rs  command_selection_rules_integration.rs  edit_clean_config_repo_integration.rs  git_operations_integration.rs  graph_fallback_integration.rs  graph_order_integration.rs  hooks_integration.rs  include_untracked_integration.rs  plan_mr_shell_integration.rs  workspace_config_precedence_integration.rs  workspace_discovery_env_integration.rs
