[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "harmonia"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
gix = { version = "0.78.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "status"] }
glob = "0.3"
indicatif = "0.17"
petgraph = "0.6"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
